test/corpus/builtins.txt
================================================================================
A_ScriptDir builtin
================================================================================

A_ScriptDir

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
A_Now builtin
================================================================================

A_Now

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
A_TickCount builtin
================================================================================

A_TickCount

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
A_TimeIdle builtin
================================================================================

A_TimeIdle

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
A_AhkVersion builtin
================================================================================

A_AhkVersion

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
A_ComSpec builtin
================================================================================

A_ComSpec

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
Clipboard builtin
================================================================================

Clipboard

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
ErrorLevel builtin
================================================================================

ErrorLevel

--------------------------------------------------------------------------------

(source_file
  (builtin_variable))

================================================================================
Builtin in assignment
================================================================================

x := A_ScriptDir

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (builtin_variable)))

================================================================================
Builtin in command variable reference
================================================================================

MsgBox, %A_ScriptDir%

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments
      (variable_ref
        (builtin_variable)))))
