test/corpus/comments.txt
================================================================================
Line comment
================================================================================

; This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Line comment with code before
================================================================================

x := 1 ; inline comment

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (operator)
  (number)
  (comment))

================================================================================
Block comment
================================================================================

/* This is a block comment */

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Multi-line block comment
================================================================================

/*
  This spans
  multiple lines
*/

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Doc comment
================================================================================

/** This is a doc comment */

--------------------------------------------------------------------------------

(source_file
  (doc_comment))

================================================================================
Multi-line doc comment
================================================================================

/**
 * Function documentation
 * @param x The input value
 */

--------------------------------------------------------------------------------

(source_file
  (doc_comment))
