test/corpus/directives.txt
================================================================================
Simple directive
================================================================================

#NoEnv

--------------------------------------------------------------------------------

(source_file
  (directive
    (identifier)))

================================================================================
Directive with argument
================================================================================

#SingleInstance force

--------------------------------------------------------------------------------

(source_file
  (directive
    (identifier)))

================================================================================
Include directive
================================================================================

#Include mylib.ahk

--------------------------------------------------------------------------------

(source_file
  (directive
    (identifier)))

================================================================================
Multiple directives
================================================================================

#NoEnv
#SingleInstance force
#Persistent

--------------------------------------------------------------------------------

(source_file
  (directive
    (identifier))
  (directive
    (identifier))
  (directive
    (identifier)))
