test/corpus/functions.txt
================================================================================
Simple function definition
================================================================================

MyFunc() {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)))

================================================================================
Function with parameter
================================================================================

MyFunc(x) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)))))

================================================================================
Function with multiple parameters
================================================================================

MyFunc(x, y, z) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier))
      (parameter
        name: (identifier))
      (parameter
        name: (identifier)))))

================================================================================
Function with default parameter
================================================================================

MyFunc(x := 10) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        default: (number)))))

================================================================================
Function with body
================================================================================

MyFunc() {
  x := 1
  return
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (block
      (assignment_expression
        left: (identifier)
        right: (number))
      (return_statement))))

================================================================================
Simple function call
================================================================================

MyFunc()

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)))

================================================================================
Function call with argument
================================================================================

MyFunc(42)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (number))))

================================================================================
Function call with multiple arguments
================================================================================

MyFunc(1, "hello", x)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (number)
      (string)
      (identifier))))

================================================================================
Nested function calls
================================================================================

Outer(Inner(x))

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (function_call
        name: (identifier)
        (argument_list
          (identifier))))))

================================================================================
Function call with assignment-like argument
================================================================================

MyFunc(x := 10)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (assignment_expression
        left: (identifier)
        right: (number)))))

================================================================================
Function call with assignment and implicit concat in RHS
================================================================================

myFunc(file := someVar "\someString.json")

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (assignment_expression
        left: (identifier)
        right: (identifier)
        right: (string)))))

================================================================================
Function with ByRef parameter
================================================================================

MyFunc(ByRef x) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        modifier: (parameter_modifier)
        name: (identifier)))))

================================================================================
Function with multiple ByRef parameters
================================================================================

MyFunc(ByRef x, y, ByRef z) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        modifier: (parameter_modifier)
        name: (identifier))
      (parameter
        name: (identifier))
      (parameter
        modifier: (parameter_modifier)
        name: (identifier)))))

================================================================================
Function with ByRef parameter and default value
================================================================================

MyFunc(ByRef x := 10) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        modifier: (parameter_modifier)
        name: (identifier)
        default: (number)))))

================================================================================
Function with mixed parameters
================================================================================

MyFunc(ByRef x, y := "test", ByRef z := 0) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        modifier: (parameter_modifier)
        name: (identifier))
      (parameter
        name: (identifier)
        default: (string))
      (parameter
        modifier: (parameter_modifier)
        name: (identifier)
        default: (number)))))

================================================================================
Function call vs ByRef parameter (disambiguation)
================================================================================

MyFunc(ByRef x) {
}

MyFunc(x)

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        modifier: (parameter_modifier)
        name: (identifier))))
  (function_call
    name: (identifier)
    (argument_list
      (identifier))))
