test/corpus/keywords.txt
================================================================================
Return keyword
================================================================================

return

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Break keyword
================================================================================

break

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Continue keyword
================================================================================

continue

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Goto keyword
================================================================================

goto

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Gosub keyword (not command)
================================================================================

gosub

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Global keyword
================================================================================

global

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Local keyword
================================================================================

local

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Static keyword
================================================================================

static

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Throw keyword
================================================================================

throw

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
True literal
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
False literal
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
New keyword
================================================================================

new

--------------------------------------------------------------------------------

(source_file
  (keyword))
