test/corpus/methods.txt
================================================================================
Simple member expression
================================================================================

obj.property

--------------------------------------------------------------------------------

(source_file
  (member_expression
    object: (identifier)
    property: (identifier)))

================================================================================
Chained member expression
================================================================================

obj.prop1.prop2

--------------------------------------------------------------------------------

(source_file
  (member_expression
    object: (member_expression
      object: (identifier)
      property: (identifier))
    property: (identifier)))

================================================================================
Simple method call
================================================================================

obj.method()

--------------------------------------------------------------------------------

(source_file
  (method_call
    object: (identifier)
    method: (identifier)))

================================================================================
Method call with argument
================================================================================

obj.method(42)

--------------------------------------------------------------------------------

(source_file
  (method_call
    object: (identifier)
    method: (identifier)
    (argument_list
      (number))))

================================================================================
Method call with multiple arguments
================================================================================

obj.method(1, "hello", x)

--------------------------------------------------------------------------------

(source_file
  (method_call
    object: (identifier)
    method: (identifier)
    (argument_list
      (number)
      (string)
      (identifier))))

================================================================================
Chained method call
================================================================================

obj.prop.method()

--------------------------------------------------------------------------------

(source_file
  (method_call
    object: (member_expression
      object: (identifier)
      property: (identifier))
    method: (identifier)))

================================================================================
Member expression assignment
================================================================================

obj.value := 10

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (member_expression
      object: (identifier)
      property: (identifier))
    right: (number)))
