test/corpus/numbers.txt
================================================================================
Simple integer
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Zero
================================================================================

0

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Large integer
================================================================================

123456789

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Simple float
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Float with leading zero
================================================================================

0.5

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Large float
================================================================================

12345.6789

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Lowercase hex
================================================================================

0xff

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Uppercase hex
================================================================================

0xFF

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Mixed case hex
================================================================================

0xDeAdBeEf

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Number in expression
================================================================================

x := 42

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (number)))

================================================================================
Multiple numbers
================================================================================

a := 1
b := 2.5
c := 0xFF

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (number))
  (assignment_expression
    left: (identifier)
    right: (number))
  (assignment_expression
    left: (identifier)
    right: (number)))
